--- a/Puzzle/app/src/main/AndroidManifest.xml
+++ b/Puzzle/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.example.deneme">
+          package="com.example.app">
 
     <application
             android:allowBackup="true"
@@ -10,12 +10,12 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
 
-        <activity android:name=".MainActivity3">
+        <activity android:name="com.example.app.MainActivity3">
         </activity>
-        <activity android:name=".MainActivity2" android:screenOrientation="portrait">
+        <activity android:name="com.example.app.MainActivity2" android:screenOrientation="portrait">
 
         </activity>
-        <activity android:name=".MainActivity">
+        <activity android:name="com.example.app.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
